--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,16 +14,16 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flame: ^0.14.2
+  flame:  ^1.19.0 #^0.14.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.8 #^0.1.2
 
 dev_dependencies:
   flutter_test:
